    (Laruence)

- GD:
  . Fixed bug #73213 (Integer overflow in imageline() with antialiasing). (cmb)
  . Fixed bug #73272 (imagescale() is not affected by, but affects
    imagesetinterpolation()). (cmb)
  . Fixed bug #73279 (Integer overflow in gdImageScaleBilinearPalette()). (cmb)
  . Fixed bug #73280 (Stack Buffer Overflow in GD dynamicGetbuf). (cmb)

- phpdbg:
  . Properly allow for stdin input from a file. (Bob)
  . Add -s command line option / stdin command for reading script from stdin.
    (Bob)
  . Ignore non-executable opcodes in line mode of phpdbg_end_oplog(). (Bob)
  . Fixed bug #70776 (Simple SIGINT does not have any effect with -rr). (Bob)
  . Fixed bug #71234 (INI files are loaded even invoked as -n --version). (Bob)

- Session:
  . Fixed bug #73273 (session_unset() empties values from all variables in which
    is $_session stored). (Nikita)

- SOAP:
  . Fixed bug #73037 (SoapServer reports Bad Request when gzipped). (Anatol)
  . Fixed bug #73237 (Nested object in "any" element overwrites other fields).
    (Keith Smiley)

- Standard:
  . Fixed bug #73203 (passing additional_parameters causes mail to fail). (cmb)

13 Oct 2016 PHP 7.0.12

- Core:
  . Fixed bug #73025 (Heap Buffer Overflow in virtual_popen of
    zend_virtual_cwd.c). (cmb)
  . Fixed bug #72703 (Out of bounds global memory read in BF_crypt triggered by
    password_verify). (Anatol)
  . Fixed bug #73058 (crypt broken when salt is 'too' long). (Anatol)
  . Fixed bug #69579 (Invalid free in extension trait). (John Boehr)
  . Fixed bug #73156 (segfault on undefined function). (Dmitry)
  . Fixed bug #73163 (PHP hangs if error handler throws while accessing undef
    const in default value). (Nikita)
  . Fixed bug #73172 (parse error: Invalid numeric literal). (Nikita, Anatol)
  . Fixed for #73240 (Write out of bounds at number_format). (Stas)
  . Fixed bug #73147 (Use After Free in PHP7 unserialize()). (Stas)
  . Fixed bug #73189 (Memcpy negative size parameter php_resolve_path). (Stas)
